# hal

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CLAUDE.md  README.md  TODO_MIGRATION.md  pyproject.toml  requirements.in  requirements.txt
.cursor/rules/: hal-project-structure.mdc
Logs/: 2024-06-30-12-36-27.114090.csv
docker/: Dockerfile  compose.yaml  entrypoint.sh  launch_vast.py  on-start.sh
experiments/: 001_flow_matching_baseline.py  001_flow_matching_rtc_baseline.py  002_flow_matching_rtc.py  003_multi_position.py  004_flow_matching_beta_t.py  005_classification.py  006_chord_ar.py  007_factorized_ar.py  008_rle_events.py  009_simplify_arch.py  010_ar_groups.py  011_muon.py  011_speedrun_log.md  011a_compile.py  011b_muon.py  011c_relfeat.py  011d_argroups.py  011e_relfeat_argroups.py  011f_2player.py  011g_rl.py  012_multi_token.py  013_interleaved_groups.py  toy_train.py
formatters/: build_script.sh
formatters/pyfixfmt/: requirements.txt
hal/: __init__.py  config.py  constants.py  emulator_helper.py  emulator_paths.py  eval.py  fixtures.py  gamestate_utils.py  gui_eval.py  headless_eval.py  iter_utils.py  local_paths.py  paths.py  policy.py  r2.py  replay.py  slp_to_pyarrow.py  streams.py  test_replay_reproduction_sanity.py  train.py  types.py  utils.py  wire.py
hal/data/: archive.py  archive_iter.py  build_index.py  calculate_stats.py  constants.py  dataloader.py  dataset.py  download_replays.py  extract.py  filter_replays.py  index.py  manifest.py  normalize.py  preprocess_dataset.py  preprocess_replay_mds.py  preprocess_replays_parquet.py  preprocessing.py  primitives.py  process_datasets.sh  process_replays.py  replay_stats.py  schema.py  slp_to_pyarrow.py  stats.py  streams.py  test_preprocessing.py
hal/emulator/: __init__.py  controller_io.py  controller_sources.py  diff.py  drive.py  enums.py  roundtrip.py  session.py  trajectory.py
hal/eval/: cross_stage.py  emulator_helper.py  emulator_paths.py  eval.py  eval_closed_loop.py  eval_helper.py  harness.py  matchups.py  play.py  scoring.py  self_play.py
hal/preprocess/: README.md  __init__.py  input_config.py  input_configs.py  input_configs_multi_token.py  input_preprocess_config.py  postprocess_config.py  postprocess_configs.py  postprocess_configs_multi_token.py  postprocess_preds.py  preprocess_inputs.py  preprocess_targets.py  preprocessor.py  registry.py  target_config.py  target_configs.py  target_configs_multi_token.py  test_encoding.py  test_postprocess_preds.py  transformations.py
hal/scripts/: fetch.py  filter.py  index.py  materialize.py  roundtrip.py  stage2_filter_replays.py  stage3_process_replays.py
hal/sim/: __init__.py  diff.py  inputs.py  loop.py  session.py  sources.py  trajectory.py  vec.py
hal/training/: canonical.py  checkpoints.py  closed_loop.py  config.py  dataloader.py  dataset.py  distributed.py  features.py  gaussian_loss_trainer.py  io.py  losses.py  mem_utils.py  multi_token_trainer.py  muon.py  optim.py  recurrent_trainer.py  runs.py  scoring.py  simple_trainer.py  streaming_dataloader.py  streaming_dataset.py  (+4 more)
notebooks/: action_space_audit.py  bench_windows_per_replay.py  benchmark_multi_cpu_worker_cuda_copy.py  benchmark_tensordict_slicing.py  build_index_exploration.py  copy_mp_shared_memory_buffer.py  ddp_tensordict.py  debug_ddp.py  debug_emulator.py  debug_loss.py  debug_one_hot.py  explore.py  filter_explore.py  find_analog_clusters.py  hyperparam_sweep.py  inspect_data.py  libmelee_example_045.py  manifest_exploration.py  multishine.py  peppi_vs_libmelee.py  profile_eval_parallelism.py  read_parquet.py  relog_005_sampled_eval.py  replay_multishine.py  replay_reproduction_sanity.README.md  replay_reproduction_sanity.py  replay_reproduction_sanity.repro_log.md  scratch.py  shared_dataset_ddp.py  shared_memory_ddp.py  sinusoidal.py  streaming_startup.py  test_button_encoding.py  test_dataloader.py  test_ddp.py  test_emulator.py  test_flexattention.py  test_gaussian_loss.py  test_inmemorydataloader.py  test_kv_cache.py  (+7 more)
scripts/: launch_vast.py  setup.sh  setup_linux.sh  setup_remote_machine.sh
tests/: test_archive_streaming.py  test_chord_ar.py  test_classification.py  test_controller_io.py  test_dataloader.py  test_emulator_roundtrip.py  test_extract.py  test_factorized_ar.py  test_index.py  test_inputs.py  test_likelihood_retrofit.py  test_matchups.py  test_multi_position.py  test_replay_stats.py  test_roundtrip.py  test_rtc_policy.py  test_scoring.py  test_session.py  test_vec.py  test_wire_bridges.py
(+42 files in other folders)
