[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hal"
version = "0.1.0"
description = "Decoder-only Transformer trained on Super Smash Bros. Melee replays"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "attrs",
    "click",
    "libcst",
    "loguru",
    "matplotlib",
    "melee",
    "more-itertools",
    "mosaicml-streaming>=0.11.0",
    "mypy-extensions",
    "numpy",
    "nvitop",
    "pandas",
    "pyarrow",
    "scikit-learn",
    "seaborn",
    "tensordict",
    "torch",
    "torchvision",
    "tqdm",
    "wandb",
    "yasoo",
]

[dependency-groups]
dev = [
    "autoflake",
    "autotyping",
    "isort",
    "pre-commit",
    "pytest",
    "ruff",
    "ty",
]

[tool.uv]
python-preference = "only-managed"

[tool.uv.sources]
melee = { git = "https://github.com/vladfi1/libmelee" }

[tool.setuptools.packages.find]
include = ["hal*"]

[tool.isort]
profile = "black"
line_length = 119
known_first_party = ["hal"]
known_third_party = ["docker", "libmelee", "slippi-Ishiiruka"]
indent = '    '
force_single_line = true
case_sensitive = true
order_by_type = false
