[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hal"
version = "0.1.0"
description = "Decoder-only Transformer trained on Super Smash Bros. Melee replays"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "attrs",
    "click",
    "libcst",
    "loguru",
    "matplotlib",
    "melee",
    "more-itertools",
    "mosaicml-streaming>=0.11.0",
    "mypy-extensions",
    "numpy",
    "nvitop",
    "pandas",
    "pyarrow",
    "scikit-learn",
    "seaborn",
    "tensordict",
    "torch",
    "torchvision",
    "tqdm",
    "wandb",
    "yasoo",
]

[dependency-groups]
dev = [
    "autoflake",
    "autotyping",
    "pre-commit",
    "pytest",
    "ruff",
    "ty",
]

[tool.uv]
python-preference = "only-managed"

[tool.uv.sources]
melee = { git = "https://github.com/vladfi1/libmelee" }

[tool.setuptools.packages.find]
include = ["hal*"]

[tool.ruff]
line-length = 119
target-version = "py314"
extend-exclude = [
    ".venv",
    "build",
    "venv",
    "emulator",
    "hal/training/models/lstm.py",
    "hal/training/models/mlp.py",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"notebooks/**" = ["B007", "B015", "B018", "B020", "B905", "E402", "E712", "F401", "F821", "F841", "SIM102", "SIM105", "SIM108", "SIM113", "SIM117", "SIM118", "UP031"]
"**/__init__.py" = ["F401"]

[tool.ruff.lint.isort]
known-first-party = ["hal"]
known-third-party = ["docker", "libmelee", "slippi-Ishiiruka"]
force-single-line = true
